--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("http://localhost:3000/wavey-fingerprint.svg");
+  background-image: url("./assets/wavey-fingerprint.svg");
   color: whitesmoke !important;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: lighter;
